--- a/composer.json
+++ b/composer.json
@@ -3,15 +3,12 @@
   "description": "A library to add profile box for WordPress.",
   "license": "GPL-2.0-or-later",
   "require": {
-    "php": ">=5.6"
+    "php": ">=7.4"
   },
   "require-dev": {
-		"dealerdirect/phpcodesniffer-composer-installer": "^0.7",
-		"squizlabs/php_codesniffer": "^3.5",
-		"phpcompatibility/php-compatibility": "^9.3",
-		"wp-coding-standards/wpcs": "^2.2",
-		"sirbrillig/phpcs-variable-analysis": "^2.8",
-    "wp-phpunit/wp-phpunit": "^5.5"
+    "wp-coding-standards/wpcs": "^2.3",
+    "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1",
+    "yoast/phpunit-polyfills": "^1.0"
   },
   "authors": [
     {
@@ -25,7 +22,12 @@
     }
   },
   "scripts": {
-    "format": "phpcbf --standard=./.phpcs.xml.dist --report-summary --report-source",
-    "lint": "phpcs --standard=./.phpcs.xml.dist"
+    "lint": "./vendor/squizlabs/php_codesniffer/bin/phpcs",
+    "format": "./vendor/squizlabs/php_codesniffer/bin/phpcbf"
+  },
+  "config": {
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
+    }
   }
 }
